Fri Jun  1 10:28:09 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Updated TODO.

	* Removed silc_client_packet_send_flush from the client library
	  as it is not needed.  Affected file lib/silcclient/client.[ch].

Thu May 31 13:57:33 CEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new distribution feature, DISTLABEL.  Every distribution
	  can define own preprocessor label that can be used in the
	  source code.  For example: #ifdef SILC_DIST_CLIENT.  Affected
	  file distributions, acconfig.h.pre and prepare.

Tue May 29 22:16:40 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added Makefile.defines_int to include the actual definitions
	  for Makefile.defines.in.  Tested the new distribution system,
	  created distributions and tested installation.

	* Added AWAY message printing to the Irssi SILC client.  Added
	  the messages to the irssi/src/fe-common/silc/module-formats.[ch].

	* Added SCONNECT command to call the SILC's CONNECT command.
	  Cannot use CONNECT directly since Irssi uses that internally.
	  Affected file irssi/src/silc/core/silc-servers.c.

	  Added ACTION local command.  It is same as ME command but takes
	  the channel as mandatory argument.

	  Rewrote some of the Irssi's help files to suite for SILC
	  protocol.

Mon May 28 19:05:22 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added Makefile.defines[.in] that should for now on be included
	  in all Makefile.am file in the source tree.  That file includes
	  all common compilation definitions for SILC source tree.

Mon May 28 10:30:51 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Minor changes to the ./prepare script to change the package
	  name according the distribution name to the configure.in.

Sun May 27 22:24:57 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Created new distribution system.  Added file `distributions'
	  that defines all the distributions that can be created out of