@@ -467,12 +467,8 @@ SILC_TASK_CALLBACK(silc_client_connect_to_server_second)
   if (!client->ops->get_auth_method(client, sock->user_data, sock->hostname,
 				    sock->port, &proto_ctx->auth_meth,
 				    &proto_ctx->auth_data, 
-				    &proto_ctx->auth_data_len)) {
-    client->ops->say(client, ctx->sock->user_data, 
-		     "Could not resolve authentication method to use, "
-		     "assume no authentication");
+				    &proto_ctx->auth_data_len))
     proto_ctx->auth_meth = SILC_AUTH_NONE;
-  }
 
   /* Free old protocol as it is finished now */
   silc_protocol_free(protocol);
